@@ -36,7 +36,6 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -86,30 +85,31 @@ public class LeaderElectionCommandTest {
         List<Integer> assignment = asList(broker2, broker3);
 
         cluster.waitForReadyBrokers();
-        Admin client = cluster.createAdminClient();
+        try (Admin client = cluster.admin()) {
 
-        createTopic(client, topic, Collections.singletonMap(partition, assignment));
+            createTopic(client, topic, Collections.singletonMap(partition, assignment));
 
-        TopicPartition topicPartition = new TopicPartition(topic, partition);
+            TopicPartition topicPartition = new TopicPartition(topic, partition);
 
-        TestUtils.assertLeader(client, topicPartition, broker2);
-        cluster.shutdownBroker(broker3);
-        TestUtils.waitForBrokersOutOfIsr(client,
-                CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-                CollectionConverters.asScala(singletonList(broker3)).toSet()
-        );
-        cluster.shutdownBroker(broker2);
-        TestUtils.assertNoLeader(client, topicPartition);
-        cluster.startBroker(broker3);
-        TestUtils.waitForOnlineBroker(client, broker3);
+            TestUtils.assertLeader(client, topicPartition, broker2);
+            cluster.shutdownBroker(broker3);
+            TestUtils.waitForBrokersOutOfIsr(client,
+                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
+                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+            );
+            cluster.shutdownBroker(broker2);
+            TestUtils.assertNoLeader(client, topicPartition);
+            cluster.startBroker(broker3);
+            TestUtils.waitForOnlineBroker(client, broker3);
 
-        assertEquals(0, LeaderElectionCommand.mainNoExit(
-            "--bootstrap-server", cluster.bootstrapServers(),
-            "--election-type", "unclean",
-            "--all-topic-partitions"
-        ));
+            assertEquals(0, LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", cluster.bootstrapServers(),
+                    "--election-type", "unclean",
+                    "--all-topic-partitions"
+            ));
 
-        TestUtils.assertLeader(client, topicPartition, broker3);
+            TestUtils.assertLeader(client, topicPartition, broker3);
+        }
     }
 
     @ClusterTest
@@ -142,31 +142,32 @@ public class LeaderElectionCommandTest {
         List<Integer> assignment = asList(broker2, broker3);
 
         cluster.waitForReadyBrokers();
-        Admin client = cluster.createAdminClient();
-        createTopic(client, topic, Collections.singletonMap(partition, assignment));
+        try (Admin client = cluster.admin()) {
+            createTopic(client, topic, Collections.singletonMap(partition, assignment));
 
-        TopicPartition topicPartition = new TopicPartition(topic, partition);
+            TopicPartition topicPartition = new TopicPartition(topic, partition);
 
-        TestUtils.assertLeader(client, topicPartition, broker2);
+            TestUtils.assertLeader(client, topicPartition, broker2);
 
-        cluster.shutdownBroker(broker3);
-        TestUtils.waitForBrokersOutOfIsr(client,
-            CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-            CollectionConverters.asScala(singletonList(broker3)).toSet()
-        );
-        cluster.shutdownBroker(broker2);
-        TestUtils.assertNoLeader(client, topicPartition);
-        cluster.startBroker(broker3);
-        TestUtils.waitForOnlineBroker(client, broker3);
+            cluster.shutdownBroker(broker3);
+            TestUtils.waitForBrokersOutOfIsr(client,
+                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
+                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+            );
+            cluster.shutdownBroker(broker2);
+            TestUtils.assertNoLeader(client, topicPartition);
+            cluster.startBroker(broker3);
+            TestUtils.waitForOnlineBroker(client, broker3);
 
-        assertEquals(0, LeaderElectionCommand.mainNoExit(
-            "--bootstrap-server", cluster.bootstrapServers(),
-            "--election-type", "unclean",
-            "--topic", topic,
-            "--partition", Integer.toString(partition)
-        ));
+            assertEquals(0, LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", cluster.bootstrapServers(),
+                    "--election-type", "unclean",
+                    "--topic", topic,
+                    "--partition", Integer.toString(partition)
+            ));
 
-        TestUtils.assertLeader(client, topicPartition, broker3);
+            TestUtils.assertLeader(client, topicPartition, broker3);
+        }
     }
 
     @ClusterTest
@@ -179,32 +180,33 @@ public class LeaderElectionCommandTest {
         Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
         partitionAssignment.put(partition, assignment);
 
-        Admin client = cluster.createAdminClient();
-        createTopic(client, topic, partitionAssignment);
+        try (Admin client = cluster.admin()) {
+            createTopic(client, topic, partitionAssignment);
 
-        TopicPartition topicPartition = new TopicPartition(topic, partition);
+            TopicPartition topicPartition = new TopicPartition(topic, partition);
 
-        TestUtils.assertLeader(client, topicPartition, broker2);
+            TestUtils.assertLeader(client, topicPartition, broker2);
 
-        cluster.shutdownBroker(broker3);
-        TestUtils.waitForBrokersOutOfIsr(client,
-            CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
-            CollectionConverters.asScala(singletonList(broker3)).toSet()
-        );
-        cluster.shutdownBroker(broker2);
-        TestUtils.assertNoLeader(client, topicPartition);
-        cluster.startBroker(broker3);
-        TestUtils.waitForOnlineBroker(client, broker3);
+            cluster.shutdownBroker(broker3);
+            TestUtils.waitForBrokersOutOfIsr(client,
+                    CollectionConverters.asScala(singletonList(topicPartition)).toSet(),
+                    CollectionConverters.asScala(singletonList(broker3)).toSet()
+            );
+            cluster.shutdownBroker(broker2);
+            TestUtils.assertNoLeader(client, topicPartition);
+            cluster.startBroker(broker3);
+            TestUtils.waitForOnlineBroker(client, broker3);
 
-        Path topicPartitionPath = tempTopicPartitionFile(singletonList(topicPartition));
+            Path topicPartitionPath = tempTopicPartitionFile(singletonList(topicPartition));
 
-        assertEquals(0, LeaderElectionCommand.mainNoExit(
-            "--bootstrap-server", cluster.bootstrapServers(),
-            "--election-type", "unclean",
-            "--path-to-json-file", topicPartitionPath.toString()
-        ));
+            assertEquals(0, LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", cluster.bootstrapServers(),
+                    "--election-type", "unclean",
+                    "--path-to-json-file", topicPartitionPath.toString()
+            ));
 
-        TestUtils.assertLeader(client, topicPartition, broker3);
+            TestUtils.assertLeader(client, topicPartition, broker3);
+        }
     }
 
     @ClusterTest
@@ -214,30 +216,31 @@ public class LeaderElectionCommandTest {
         List<Integer> assignment = asList(broker2, broker3);
 
         cluster.waitForReadyBrokers();
-        Admin client = cluster.createAdminClient();
-        Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
-        partitionAssignment.put(partition, assignment);
+        try (Admin client = cluster.admin()) {
+            Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
+            partitionAssignment.put(partition, assignment);
 
-        createTopic(client, topic, partitionAssignment);
+            createTopic(client, topic, partitionAssignment);
 
-        TopicPartition topicPartition = new TopicPartition(topic, partition);
+            TopicPartition topicPartition = new TopicPartition(topic, partition);
 
-        TestUtils.assertLeader(client, topicPartition, broker2);
+            TestUtils.assertLeader(client, topicPartition, broker2);
 
-        cluster.shutdownBroker(broker2);
-        TestUtils.assertLeader(client, topicPartition, broker3);
-        cluster.startBroker(broker2);
-        TestUtils.waitForBrokersInIsr(client, topicPartition,
-            CollectionConverters.asScala(singletonList(broker2)).toSet()
-        );
+            cluster.shutdownBroker(broker2);
+            TestUtils.assertLeader(client, topicPartition, broker3);
+            cluster.startBroker(broker2);
+            TestUtils.waitForBrokersInIsr(client, topicPartition,
+                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+            );
 
-        assertEquals(0, LeaderElectionCommand.mainNoExit(
-            "--bootstrap-server", cluster.bootstrapServers(),
-            "--election-type", "preferred",
-            "--all-topic-partitions"
-        ));
+            assertEquals(0, LeaderElectionCommand.mainNoExit(
+                    "--bootstrap-server", cluster.bootstrapServers(),
+                    "--election-type", "preferred",
+                    "--all-topic-partitions"
+            ));
 
-        TestUtils.assertLeader(client, topicPartition, broker2);
+            TestUtils.assertLeader(client, topicPartition, broker2);
+        }
     }
 
     @ClusterTest
@@ -261,28 +264,31 @@ public class LeaderElectionCommandTest {
         List<Integer> assignment1 = asList(broker3, broker2);
 
         cluster.waitForReadyBrokers();
-        Admin client = cluster.createAdminClient();
-        Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
-        partitionAssignment.put(partition0, assignment0);
-        partitionAssignment.put(partition1, assignment1);
+        TopicPartition topicPartition0;
+        TopicPartition topicPartition1;
+        try (Admin client = cluster.admin()) {
+            Map<Integer, List<Integer>> partitionAssignment = new HashMap<>();
+            partitionAssignment.put(partition0, assignment0);
+            partitionAssignment.put(partition1, assignment1);
 
-        createTopic(client, topic, partitionAssignment);
+            createTopic(client, topic, partitionAssignment);
 
-        TopicPartition topicPartition0 = new TopicPartition(topic, partition0);
-        TopicPartition topicPartition1 = new TopicPartition(topic, partition1);
+            topicPartition0 = new TopicPartition(topic, partition0);
+            topicPartition1 = new TopicPartition(topic, partition1);
 
-        TestUtils.assertLeader(client, topicPartition0, broker2);
-        TestUtils.assertLeader(client, topicPartition1, broker3);
+            TestUtils.assertLeader(client, topicPartition0, broker2);
+            TestUtils.assertLeader(client, topicPartition1, broker3);
 
-        cluster.shutdownBroker(broker2);
-        TestUtils.assertLeader(client, topicPartition0, broker3);
-        cluster.startBroker(broker2);
-        TestUtils.waitForBrokersInIsr(client, topicPartition0,
-            CollectionConverters.asScala(singletonList(broker2)).toSet()
-        );
-        TestUtils.waitForBrokersInIsr(client, topicPartition1,
-            CollectionConverters.asScala(singletonList(broker2)).toSet()
-        );
+            cluster.shutdownBroker(broker2);
+            TestUtils.assertLeader(client, topicPartition0, broker3);
+            cluster.startBroker(broker2);
+            TestUtils.waitForBrokersInIsr(client, topicPartition0,
+                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+            );
+            TestUtils.waitForBrokersInIsr(client, topicPartition1,
+                    CollectionConverters.asScala(singletonList(broker2)).toSet()
+            );
+        }
 
         Path topicPartitionPath = tempTopicPartitionFile(asList(topicPartition0, topicPartition1));
         String output = ToolsTestUtils.captureStandardOut(() ->
@@ -318,7 +324,7 @@ public class LeaderElectionCommandTest {
 
         String jsonString = stringifyTopicPartitions(new HashSet<>(partitions));
 
-        Files.write(file.toPath(), jsonString.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file.toPath(), jsonString);
 
         return file.toPath();
     }
@@ -326,7 +332,7 @@ public class LeaderElectionCommandTest {
     private Path tempAdminConfig(String defaultApiTimeoutMs, String requestTimeoutMs) throws Exception {
         String content = "default.api.timeout.ms=" + defaultApiTimeoutMs + "\nrequest.timeout.ms=" + requestTimeoutMs;
         java.io.File file = TestUtils.tempFile("admin-config", ".properties");
-        Files.write(file.toPath(), content.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(file.toPath(), content);
         return file.toPath();
     }
 
