@@ -20,16 +20,21 @@ import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.admin.ConsumerGroupDescription;
+import org.apache.kafka.clients.admin.MemberDescription;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.GroupProtocol;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.consumer.RangeAssignor;
 import org.apache.kafka.clients.consumer.RoundRobinAssignor;
-import org.apache.kafka.common.ConsumerGroupState;
+import org.apache.kafka.clients.producer.KafkaProducer;
+import org.apache.kafka.clients.producer.ProducerConfig;
+import org.apache.kafka.common.GroupState;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.errors.GroupIdNotFoundException;
 import org.apache.kafka.common.errors.TimeoutException;
 import org.apache.kafka.common.serialization.StringDeserializer;
+import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.test.api.ClusterConfig;
 import org.apache.kafka.common.test.api.ClusterInstance;
 import org.apache.kafka.common.test.api.ClusterTemplate;
@@ -60,6 +65,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.test.TestUtils.RANDOM;
@@ -67,15 +73,16 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 @ExtendWith(value = ClusterTestExtensions.class)
 public class DescribeConsumerGroupTest {
     private static final String TOPIC_PREFIX = "test.topic.";
     private static final String GROUP_PREFIX = "test.group.";
-    private static final List<List<String>> DESCRIBE_TYPE_OFFSETS = Arrays.asList(Collections.singletonList(""), Collections.singletonList("--offsets"));
-    private static final List<List<String>> DESCRIBE_TYPE_MEMBERS = Arrays.asList(Collections.singletonList("--members"), Arrays.asList("--members", "--verbose"));
-    private static final List<List<String>> DESCRIBE_TYPE_STATE = Collections.singletonList(Collections.singletonList("--state"));
-    private static final List<List<String>> DESCRIBE_TYPES = Stream.of(DESCRIBE_TYPE_OFFSETS, DESCRIBE_TYPE_MEMBERS, DESCRIBE_TYPE_STATE).flatMap(Collection::stream).collect(Collectors.toList());
+    private static final List<List<String>> DESCRIBE_TYPE_OFFSETS = List.of(List.of(""), List.of("--offsets"), List.of("--offsets", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPE_MEMBERS = List.of(List.of("--members"), List.of("--members", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPE_STATE = List.of(List.of("--state"), List.of("--state", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPES = Stream.of(DESCRIBE_TYPE_OFFSETS, DESCRIBE_TYPE_MEMBERS, DESCRIBE_TYPE_STATE).flatMap(Collection::stream).toList();
     private ClusterInstance clusterInstance;
 
     private static List<ClusterConfig> generator() {
@@ -91,9 +98,13 @@ public class DescribeConsumerGroupTest {
             List<String> cgcArgs = new ArrayList<>(Arrays.asList("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", missingGroup));
             cgcArgs.addAll(describeType);
             try (ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]))) {
-                String output = ToolsTestUtils.grabConsoleOutput(describeGroups(service));
-                assertTrue(output.contains("Consumer group '" + missingGroup + "' does not exist."),
-                        "Expected error was not detected for describe option '" + String.join(" ", describeType) + "'");
+                service.describeGroups();
+                fail("Expected error was not detected for describe option '" + String.join(" ", describeType) + "'");
+            } catch (ExecutionException ee) {
+                assertInstanceOf(GroupIdNotFoundException.class, ee.getCause());
+                assertEquals("Group " + missingGroup + " not found.", ee.getCause().getMessage());
+            } catch (Exception e) {
+                fail("Expected error was not detected for describe option '" + String.join(" ", describeType) + "'");
             }
         }
     }
@@ -112,9 +123,11 @@ public class DescribeConsumerGroupTest {
                  // note the group to be queried is a different (non-existing) group
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", missingGroup})
             ) {
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(missingGroup);
-                assertTrue(res.getKey().map(s -> s.equals(ConsumerGroupState.DEAD)).orElse(false) && res.getValue().map(Collection::isEmpty).orElse(false),
-                        "Expected the state to be 'Dead', with no members in the group '" + missingGroup + "'.");
+                service.collectGroupOffsets(missingGroup);
+                fail("Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
+            } catch (ExecutionException ee) {
+                assertInstanceOf(GroupIdNotFoundException.class, ee.getCause(),
+                    "Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
             }
         }
     }
@@ -131,13 +144,11 @@ public class DescribeConsumerGroupTest {
                  // note the group to be queried is a different (non-existing) group
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", missingGroup})
             ) {
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(missingGroup, false);
-                assertTrue(res.getKey().map(s -> s.equals(ConsumerGroupState.DEAD)).orElse(false) && res.getValue().map(Collection::isEmpty).orElse(false),
-                        "Expected the state to be 'Dead', with no members in the group '" + missingGroup + "'.");
-
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res2 = service.collectGroupMembers(missingGroup, true);
-                assertTrue(res2.getKey().map(s -> s.equals(ConsumerGroupState.DEAD)).orElse(false) && res2.getValue().map(Collection::isEmpty).orElse(false),
-                        "Expected the state to be 'Dead', with no members in the group '" + missingGroup + "' (verbose option).");
+                service.collectGroupMembers(missingGroup);
+                fail("Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
+            } catch (ExecutionException ee) {
+                assertInstanceOf(GroupIdNotFoundException.class, ee.getCause(),
+                    "Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
             }
         }
     }
@@ -154,30 +165,190 @@ public class DescribeConsumerGroupTest {
                  // note the group to be queried is a different (non-existing) group
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", missingGroup})
             ) {
-                GroupState state = service.collectGroupState(missingGroup);
-                assertTrue(Objects.equals(state.state, ConsumerGroupState.DEAD) && state.numMembers == 0 &&
-                                state.coordinator != null && clusterInstance.brokerIds().contains(state.coordinator.id()),
-                        "Expected the state to be 'Dead', with no members in the group '" + missingGroup + "'."
-                );
+                service.collectGroupState(missingGroup);
+                fail("Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
+            } catch (ExecutionException ee) {
+                assertInstanceOf(GroupIdNotFoundException.class, ee.getCause(),
+                        "Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
             }
         }
     }
 
     @ClusterTemplate("generator")
-    public void testDescribeExistingGroup(ClusterInstance clusterInstance) throws Exception {
+    public void testDescribeGroupOffsets(ClusterInstance clusterInstance) throws Exception {
         this.clusterInstance = clusterInstance;
         for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
-            createTopic(topic);
-            for (List<String> describeType : DESCRIBE_TYPES) {
-                String protocolGroup = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
-                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic, Collections.emptyMap());
-                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", protocolGroup})
+            clusterInstance.createTopic(topic, 1, (short) 1);
+            sendRecords(topic, 0, 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_OFFSETS) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, topic, Map.of());
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
                 ) {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
-                        return res.getKey().trim().split("\n").length == 2 && res.getValue().isEmpty();
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                        MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+
+                        List<String> expectedValues;
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, topic, "0", "-", "1", "1", "0", memberDescription.consumerId(),
+                                memberDescription.host(), memberDescription.clientId());
+                        } else {
+                            expectedValues = List.of(group, topic, "0", "1", "1", "0", memberDescription.consumerId(),
+                                memberDescription.host(), memberDescription.clientId());
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
                     }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
+                }
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupMembers(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
+            boolean isConsumer = groupProtocol.equals(GroupProtocol.CONSUMER);
+            String topic1 = TOPIC_PREFIX + groupProtocol.name() + "1";
+            String topic2 = TOPIC_PREFIX + groupProtocol.name() + "2";
+            clusterInstance.createTopic(topic1, 2, (short) 1);
+            clusterInstance.createTopic(topic2, 1, (short) 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_MEMBERS) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, Set.of(topic1, topic2), Map.of(), 1);
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
+                ) {
+                    TestUtils.waitForCondition(() -> {
+                        Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                        MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+                        String topicAssignment = topic1 + ":0,1;" + topic2 + ":0";
+
+                        List<String> expectedValues;
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, memberDescription.consumerId(), memberDescription.host(),
+                                memberDescription.clientId(), "3", isConsumer ? memberDescription.memberEpoch().get().toString() : "-",
+                                topicAssignment, isConsumer ? consumerGroupDescription.targetAssignmentEpoch().get().toString() : "-",
+                                isConsumer ? topicAssignment : "-");
+                        } else {
+                            expectedValues = List.of(group, memberDescription.consumerId(), memberDescription.host(),
+                                memberDescription.clientId(), "3");
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
+                    }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
+                }
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupMemberWithMigration(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        String topic = TOPIC_PREFIX + "migration";
+        String group = GROUP_PREFIX + "migration";
+        String classicClientId = "classic";
+        String consumerClientId = "consumer";
+        clusterInstance.createTopic(topic, 2, (short) 1);
+        List<String> cgcArgs = List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group, "--members", "--verbose");
+        try (AutoCloseable classicConsumer = consumerGroupClosable(GroupProtocol.CLASSIC, group, topic, Map.of(ConsumerConfig.CLIENT_ID_CONFIG, classicClientId));
+             Admin admin = clusterInstance.admin()
+        ) {
+            // Make sure the classic consumer is stable before starting another consumer.
+            TestUtils.waitForCondition(
+                () -> {
+                    ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                    MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+                    return !memberDescription.assignment().topicPartitions().isEmpty();
+                },
+                "Expected the classic consumer to join the group."
+            );
+
+            try (AutoCloseable consumerConsumer = consumerGroupClosable(GroupProtocol.CONSUMER, group, topic, Map.of(ConsumerConfig.CLIENT_ID_CONFIG, consumerClientId));
+                 ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+            ) {
+                TestUtils.waitForCondition(() -> {
+                    Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                    String[] lines = res.getKey().trim().split("\n");
+                    if (lines.length != 3 && !res.getValue().isEmpty()) {
+                        return false;
+                    }
+
+                    // We can't guarantee the order of the lines and final assignment on both members,
+                    // so only checking UPGRADED field to make sure the tool can reflect member migration.
+                    String[] header = lines[0].trim().split("\\s+");
+                    assertEquals("UPGRADED", header[header.length - 1]);
+                    List<String> line1 = Arrays.stream(lines[1].trim().split("\\s+")).toList();
+                    List<String> line2 = Arrays.stream(lines[2].trim().split("\\s+")).toList();
+                    if (line1.contains(classicClientId)) {
+                        assertEquals("false", line1.get(line1.size() - 1));
+                        assertEquals("true", line2.get(line2.size() - 1));
+                    } else {
+                        assertEquals("false", line2.get(line2.size() - 1));
+                        assertEquals("true", line1.get(line1.size() - 1));
+                    }
+                    return true;
+                }, "Expected a data row and no error in describe results with describe type \"--members --verbose\"");
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupState(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
+            boolean isConsumer = groupProtocol.equals(GroupProtocol.CONSUMER);
+            String topic = TOPIC_PREFIX + groupProtocol.name();
+            clusterInstance.createTopic(topic, 1, (short) 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_STATE) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, topic, Map.of());
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
+                ) {
+                    TestUtils.waitForCondition(() -> {
+                        Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+
+                        List<String> expectedValues;
+                        String coordinatorAddress = consumerGroupDescription.coordinator().host() + ":" + consumerGroupDescription.coordinator().port();
+                        String coordinatorId = "(" + consumerGroupDescription.coordinator().idString() + ")";
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, coordinatorAddress, coordinatorId, consumerGroupDescription.partitionAssignor(), GroupState.STABLE.toString(),
+                                isConsumer ? consumerGroupDescription.groupEpoch().get().toString() : "-",
+                                isConsumer ? consumerGroupDescription.targetAssignmentEpoch().get().toString() : "-", "1");
+                        } else {
+                            expectedValues = List.of(group, coordinatorAddress, coordinatorId, consumerGroupDescription.partitionAssignor(), GroupState.STABLE.toString(), "1");
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
+                    }, "Expected two data rows and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                 }
             }
         }
@@ -210,7 +381,9 @@ public class DescribeConsumerGroupTest {
                         TestUtils.waitForCondition(() -> {
                             Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                             long numLines = Arrays.stream(res.getKey().trim().split("\n")).filter(line -> !line.isEmpty()).count();
-                            return (numLines == expectedNumLines) && res.getValue().isEmpty();
+                            return (numLines == expectedNumLines) &&
+                                res.getValue().isEmpty() &&
+                                checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                         }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                     }
                 }
@@ -240,11 +413,15 @@ public class DescribeConsumerGroupTest {
                 }
                 int expectedNumLines = DESCRIBE_TYPES.size() * 2;
                 for (List<String> describeType : DESCRIBE_TYPES) {
-                    try (ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--all-groups"})) {
+                    List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--all-groups"));
+                    cgcArgs.addAll(describeType);
+                    try (ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]))) {
                         TestUtils.waitForCondition(() -> {
                             Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                             long numLines = Arrays.stream(res.getKey().trim().split("\n")).filter(line -> !line.isEmpty()).count();
-                            return (numLines == expectedNumLines) && res.getValue().isEmpty();
+                            return (numLines == expectedNumLines) &&
+                                res.getValue().isEmpty() &&
+                                checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                         }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                     }
                 }
@@ -272,13 +449,13 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> groupOffsets = service.collectGroupOffsets(group);
-                    Optional<ConsumerGroupState> state = groupOffsets.getKey();
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> groupOffsets = service.collectGroupOffsets(group);
+                    Optional<GroupState> state = groupOffsets.getKey();
                     Optional<Collection<PartitionAssignmentState>> assignments = groupOffsets.getValue();
 
                     Predicate<PartitionAssignmentState> isGrp = s -> Objects.equals(s.group, group);
 
-                    boolean res = state.map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) &&
+                    boolean res = state.map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             assignments.isPresent() &&
                             assignments.get().stream().filter(isGrp).count() == 1;
 
@@ -317,7 +494,7 @@ public class DescribeConsumerGroupTest {
                     return consumerGroupDescription.members().size() == 1 && consumerGroupDescription.members().iterator().next().assignment().topicPartitions().size() == 1;
                 }, "Expected a 'Stable' group status, rows and valid member information for group " + group + ".");
 
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
 
                 assertTrue(res.getValue().isPresent());
                 assertTrue(res.getValue().get().size() == 1 && res.getValue().get().iterator().next().assignment.size() == 1,
@@ -339,8 +516,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    GroupState state = service.collectGroupState(group);
-                    return Objects.equals(state.state, ConsumerGroupState.STABLE) &&
+                    GroupInformation state = service.collectGroupState(group);
+                    return Objects.equals(state.groupState, GroupState.STABLE) &&
                             state.numMembers == 1 &&
                             state.coordinator != null &&
                             clusterInstance.brokerIds().contains(state.coordinator.id());
@@ -371,8 +548,8 @@ public class DescribeConsumerGroupTest {
 
                 try (ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})) {
                     TestUtils.waitForCondition(() -> {
-                        GroupState state = service.collectGroupState(group);
-                        return Objects.equals(state.state, ConsumerGroupState.STABLE) &&
+                        GroupInformation state = service.collectGroupState(group);
+                        return Objects.equals(state.groupState, GroupState.STABLE) &&
                                 state.numMembers == 1 &&
                                 Objects.equals(state.assignmentStrategy, expectedName) &&
                                 state.coordinator != null &&
@@ -396,13 +573,17 @@ public class DescribeConsumerGroupTest {
 
             for (List<String> describeType : DESCRIBE_TYPES) {
                 String group = GROUP_PREFIX + groupProtocol.name() + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
                 // run one consumer in the group consuming from a single-partition topic
                 try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, topic, Collections.emptyMap());
-                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]))
                 ) {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
-                        return res.getKey().trim().split("\n").length == 2 && res.getValue().isEmpty();
+                        return res.getKey().trim().split("\n").length == 2 &&
+                            res.getValue().isEmpty() &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected describe group results with one data row for describe type '" + String.join(" ", describeType) + "'");
                     
                     protocolConsumerGroupExecutor.close();
@@ -427,8 +608,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false)
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false)
                             && res.getValue().map(c -> c.stream().anyMatch(assignment -> Objects.equals(assignment.group, group) && assignment.offset.isPresent())).orElse(false);
                 }, "Expected the group to initially become stable, and to find group in assignments after initial offset commit.");
 
@@ -436,12 +617,12 @@ public class DescribeConsumerGroupTest {
                 protocolConsumerGroupExecutor.close();
 
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> offsets = service.collectGroupOffsets(group);
-                    Optional<ConsumerGroupState> state = offsets.getKey();
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> offsets = service.collectGroupOffsets(group);
+                    Optional<GroupState> state = offsets.getKey();
                     Optional<Collection<PartitionAssignmentState>> assignments = offsets.getValue();
                     List<PartitionAssignmentState> testGroupAssignments = assignments.get().stream().filter(a -> Objects.equals(a.group, group)).collect(Collectors.toList());
                     PartitionAssignmentState assignment = testGroupAssignments.get(0);
-                    return state.map(s -> s.equals(ConsumerGroupState.EMPTY)).orElse(false) &&
+                    return state.map(s -> s.equals(GroupState.EMPTY)).orElse(false) &&
                             testGroupAssignments.size() == 1 &&
                             assignment.consumerId.map(c -> c.trim().equals(ConsumerGroupCommand.MISSING_COLUMN_VALUE)).orElse(false) && // the member should be gone
                             assignment.clientId.map(c -> c.trim().equals(ConsumerGroupCommand.MISSING_COLUMN_VALUE)).orElse(false) &&
@@ -464,8 +645,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false)
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false)
                             && res.getValue().map(c -> c.stream().anyMatch(m -> Objects.equals(m.group, group))).orElse(false);
                 }, "Expected the group to initially become stable, and to find group in assignments after initial offset commit.");
 
@@ -473,8 +654,8 @@ public class DescribeConsumerGroupTest {
                 protocolConsumerGroupExecutor.close();
 
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.EMPTY)).orElse(false) && res.getValue().isPresent() && res.getValue().get().isEmpty();
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                    return res.getKey().map(s -> s.equals(GroupState.EMPTY)).orElse(false) && res.getValue().isPresent() && res.getValue().get().isEmpty();
                 }, "Expected no member in describe group members results for group '" + group + "'");
             }
         }
@@ -493,8 +674,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    GroupState state = service.collectGroupState(group);
-                    return Objects.equals(state.state, ConsumerGroupState.STABLE) &&
+                    GroupInformation state = service.collectGroupState(group);
+                    return Objects.equals(state.groupState, GroupState.STABLE) &&
                             state.numMembers == 1 &&
                             state.coordinator != null &&
                             clusterInstance.brokerIds().contains(state.coordinator.id());
@@ -504,8 +685,8 @@ public class DescribeConsumerGroupTest {
                 protocolConsumerGroupExecutor.close();
 
                 TestUtils.waitForCondition(() -> {
-                    GroupState state = service.collectGroupState(group);
-                    return Objects.equals(state.state, ConsumerGroupState.EMPTY) && state.numMembers == 0;
+                    GroupInformation state = service.collectGroupState(group);
+                    return Objects.equals(state.groupState, GroupState.EMPTY) && state.numMembers == 0;
                 }, "Expected the group to become empty after the only member leaving.");
             }
         }
@@ -529,7 +710,9 @@ public class DescribeConsumerGroupTest {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                         int expectedNumRows = DESCRIBE_TYPE_MEMBERS.contains(describeType) ? 3 : 2;
-                        return res.getValue().isEmpty() && res.getKey().trim().split("\n").length == expectedNumRows;
+                        return res.getValue().isEmpty() &&
+                            res.getKey().trim().split("\n").length == expectedNumRows &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected a single data row in describe group result with describe type '" + String.join(" ", describeType) + "'");
                 }
             }
@@ -549,8 +732,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).isPresent() &&
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).isPresent() &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 1 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.partition.isPresent()).count() == 1;
@@ -572,17 +755,17 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) &&
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.numPartitions == 1).count() == 1 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.numPartitions == 0).count() == 1 &&
-                            res.getValue().get().stream().allMatch(s -> s.assignment.isEmpty());
+                            res.getValue().get().stream().anyMatch(s -> !s.assignment.isEmpty());
                 }, "Expected rows for consumers with no assigned partitions in describe group results");
 
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
-                assertTrue(res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false)
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                assertTrue(res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false)
                                 && res.getValue().map(c -> c.stream().anyMatch(s -> !s.assignment.isEmpty())).orElse(false),
                         "Expected additional columns in verbose version of describe members");
             }
@@ -602,8 +785,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    GroupState state = service.collectGroupState(group);
-                    return Objects.equals(state.state, ConsumerGroupState.STABLE) && state.numMembers == 2;
+                    GroupInformation state = service.collectGroupState(group);
+                    return Objects.equals(state.groupState, GroupState.STABLE) && state.numMembers == 2;
                 }, "Expected two consumers in describe group results");
             }
         }
@@ -627,7 +810,9 @@ public class DescribeConsumerGroupTest {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                         int expectedNumRows = DESCRIBE_TYPE_STATE.contains(describeType) ? 2 : 3;
-                        return res.getValue().isEmpty() && res.getKey().trim().split("\n").length == expectedNumRows;
+                        return res.getValue().isEmpty() &&
+                            res.getKey().trim().split("\n").length == expectedNumRows &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected a single data row in describe group result with describe type '" + String.join(" ", describeType) + "'");
                 }
             }
@@ -647,8 +832,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) &&
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.partition.isPresent()).count() == 2 &&
@@ -671,16 +856,16 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) &&
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                    return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.numPartitions == 1).count() == 2 &&
                             res.getValue().get().stream().noneMatch(x -> Objects.equals(x.group, group) && x.numPartitions == 0);
                 }, "Expected two rows (one row per consumer) in describe group members results.");
 
-                Entry<Optional<ConsumerGroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
-                assertTrue(res.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) && res.getValue().map(s -> s.stream().filter(x -> x.assignment.isEmpty()).count()).orElse(0L) == 0,
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
+                assertTrue(res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) && res.getValue().map(s -> s.stream().filter(x -> x.assignment.isEmpty()).count()).orElse(0L) == 0,
                         "Expected additional columns in verbose version of describe members");
             }
         }
@@ -699,8 +884,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    GroupState state = service.collectGroupState(group);
-                    return Objects.equals(state.state, ConsumerGroupState.STABLE) && Objects.equals(state.group, group) && state.numMembers == 2;
+                    GroupInformation state = service.collectGroupState(group);
+                    return Objects.equals(state.groupState, GroupState.STABLE) && Objects.equals(state.group, group) && state.numMembers == 2;
                 }, "Expected a stable group with two members in describe group state result.");
             }
         }
@@ -719,8 +904,8 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
-                    return res.getKey().map(s -> s.equals(ConsumerGroupState.EMPTY)).orElse(false)
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> res = service.collectGroupOffsets(group);
+                    return res.getKey().map(s -> s.equals(GroupState.EMPTY)).orElse(false)
                             && res.getValue().isPresent() && res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2;
                 }, "Expected a stable group with two members in describe group state result.");
             }
@@ -791,9 +976,9 @@ public class DescribeConsumerGroupTest {
                  // set the group initialization timeout too low for the group to stabilize
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group, "--timeout", "1"})
             ) {
-                Throwable e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group, false));
+                Throwable e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group));
                 assertEquals(TimeoutException.class, e.getCause().getClass());
-                e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group, true));
+                e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group));
                 assertEquals(TimeoutException.class, e.getCause().getClass());
             }
         }
@@ -834,11 +1019,11 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<ConsumerGroupState>, Optional<Collection<PartitionAssignmentState>>> groupOffsets = service.collectGroupOffsets(group);
+                    Entry<Optional<GroupState>, Optional<Collection<PartitionAssignmentState>>> groupOffsets = service.collectGroupOffsets(group);
 
                     Predicate<PartitionAssignmentState> isGrp = s -> Objects.equals(s.group, group);
 
-                    boolean res = groupOffsets.getKey().map(s -> s.equals(ConsumerGroupState.STABLE)).orElse(false) &&
+                    boolean res = groupOffsets.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             groupOffsets.getValue().isPresent() &&
                             groupOffsets.getValue().get().stream().filter(isGrp).count() == 1;
 
@@ -965,6 +1150,16 @@ public class DescribeConsumerGroupTest {
     }
 
     private AutoCloseable consumerGroupClosable(GroupProtocol protocol, String groupId, String topicName, Map<String, Object> customConfigs, int numConsumers) {
+        return consumerGroupClosable(protocol, groupId, Set.of(topicName), customConfigs, numConsumers);
+    }
+
+    private AutoCloseable consumerGroupClosable(
+        GroupProtocol protocol,
+        String groupId,
+        Set<String> topicNames,
+        Map<String, Object> customConfigs,
+        int numConsumers
+    ) {
         Map<String, Object> configs = composeConfigs(
                 groupId,
                 protocol.name,
@@ -972,9 +1167,9 @@ public class DescribeConsumerGroupTest {
         );
         return ConsumerGroupCommandTestUtils.buildConsumers(
                 numConsumers,
-                false,
-                topicName,
-                () -> new KafkaConsumer<String, String>(configs)
+                true,
+                () -> new KafkaConsumer<String, String>(configs),
+                consumer -> consumer.subscribe(topicNames)
         );
     }
 
@@ -985,7 +1180,6 @@ public class DescribeConsumerGroupTest {
         configs.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         configs.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
         configs.put(ConsumerConfig.GROUP_PROTOCOL_CONFIG, groupProtocol);
-        configs.put(ConsumerConfig.PARTITION_ASSIGNMENT_STRATEGY_CONFIG, RangeAssignor.class.getName());
 
         configs.putAll(customConfigs);
         return configs;
@@ -993,5 +1187,59 @@ public class DescribeConsumerGroupTest {
 
     private Runnable describeGroups(ConsumerGroupCommand.ConsumerGroupService service) {
         return () -> Assertions.assertDoesNotThrow(service::describeGroups);
+    }
+
+    private boolean checkArgsHeaderOutput(List<String> args, String output) {
+        if (!output.contains("GROUP")) {
+            return false;
+        }
+
+        if (args.contains("--members")) {
+            return checkMembersArgsHeaderOutput(output, args.contains("--verbose"));
+        }
+
+        if (args.contains("--state")) {
+            return checkStateArgsHeaderOutput(output, args.contains("--verbose"));
+        }
+
+        // --offsets or no arguments
+        return checkOffsetsArgsHeaderOutput(output, args.contains("--verbose"));
+    }
+
+    private boolean checkOffsetsArgsHeaderOutput(String output, boolean verbose) {
+        List<String> expectedKeys = verbose ?
+            List.of("GROUP", "TOPIC", "PARTITION", "LEADER-EPOCH", "CURRENT-OFFSET", "LOG-END-OFFSET", "LAG", "CONSUMER-ID", "HOST", "CLIENT-ID") :
+            List.of("GROUP", "TOPIC", "PARTITION", "CURRENT-OFFSET", "LOG-END-OFFSET", "LAG", "CONSUMER-ID", "HOST", "CLIENT-ID");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
+    }
+
+    private boolean checkStateArgsOutput(String output) {
+        return output.contains("COORDINATOR (ID)") && output.contains("ASSIGNMENT-STRATEGY") && output.contains("STATE") && output.contains("#MEMBERS");
+    }
+
+    private boolean checkMembersArgsHeaderOutput(String output, boolean verbose) {
+        List<String> expectedKeys = verbose ?
+            List.of("GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS", "CURRENT-EPOCH", "CURRENT-ASSIGNMENT", "TARGET-EPOCH", "TARGET-ASSIGNMENT") :
+            List.of("GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
+    }
+
+    private boolean checkStateArgsHeaderOutput(String output, boolean verbose) {
+        List<String> expectedKeys = verbose ?
+            List.of("GROUP", "COORDINATOR", "(ID)", "ASSIGNMENT-STRATEGY", "STATE", "GROUP-EPOCH", "TARGET-ASSIGNMENT-EPOCH", "#MEMBERS") :
+            List.of("GROUP", "COORDINATOR", "(ID)", "ASSIGNMENT-STRATEGY", "STATE", "#MEMBERS");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
+    }
+
+    private void sendRecords(String topic, int partition, int recordsCount) {
+        try (KafkaProducer<String, String> producer = new KafkaProducer<>(Map.of(
+            ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers(),
+            ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName(),
+            ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName()
+        ))) {
+            IntStream.range(0, recordsCount).forEach(i ->
+                producer.send(new org.apache.kafka.clients.producer.ProducerRecord<>(topic, partition, Integer.toString(i), Integer.toString(i))));
+            producer.flush();
+        }
     }
 }
